--- a/style.css
+++ b/style.css
@@ -117,6 +117,13 @@ html {
     width: calc(100% - 50px);
     height: 100%;
 }
+.map-container .country {
+    fill: var(--white);
+    stroke: var(--black);
+}
+.map-container .russia {
+    fill: var(--red);
+}
 .progress-container {
     width: 100%;
     height: 80px;
