--- a/style.css
+++ b/style.css
@@ -2,8 +2,22 @@
     --black: #3A3A3A;
     --white: #F4F4F4;
     --blue: #1FB1A9;
-    --yellow: #d8be63;
-    --red: #a95353;
+    --blue-op: #1FB1A9aa;
+    --legg-10: #f8e08a;
+    --legg-20: #f5d872;
+    --legg-30: #e9ca5c;
+    --legg-40: #e4be34;
+
+    --legg-50: #e69635;
+    --legg-60: #ca7c1d;
+    --legg-70: #bc6d0c;
+    
+    --legg-80: #a95353;
+    --legg-90: #884343;
+    --legg-100: #703838; 
+    
+    --red: #b13e3e;
+    --red-clear: #b45454;
 }
 * {
     margin: 0;
@@ -68,7 +82,52 @@ html {
       transform: rotate(1turn);
     }
 }
-   
+.cover {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1000;
+    background-color: var(--blue-op);
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;;
+}
+.det {
+    padding: 50px 20px;
+    background-color: var(--white);
+    width: 30%;
+    height: 70%;
+    overflow: scroll;
+    border-radius: 15px;
+}
+.det h2 {
+    margin-bottom: 30px;
+}
+.det p {
+    margin-bottom: 20px;
+}
+.close {
+    position: fixed;
+    background-color: var(--red);
+    border: none;
+    padding: 10px 15px;
+    color: var(--white);
+    font-weight: bold;
+    border-radius: 300px;
+    top: calc(15% - 10px);
+    right: calc(35% - 10px);
+    font-size: 15px;
+}
+.close:hover {
+    cursor: pointer;
+    background: var(--red-clear);
+}
+[data-cover="true"] {
+    display: flex;
+}
+[data-cover="false"] {
+    display: none;
+}
 .main-container {
     width: 100%;
     height: 100vh;
@@ -89,6 +148,22 @@ html {
 }
 .header h1, .header h2, .header h3 {
     font-size: 20px;
+}
+
+.infos {
+    border: none;
+    background-color: var(--white);
+}
+
+.infos:hover {
+    cursor: pointer;
+}
+
+.infos svg {
+    fill: var(--black);
+}
+.infos:hover svg {
+    fill: var(--blue);
 }
 .central-section {
     width: 100%;
@@ -111,7 +186,46 @@ html {
     height: 100%;
     border-radius: 100px;
     background: var(--white);
-    background: linear-gradient(0deg, var(--white) 0%, var(--yellow) 33%, var(--red) 100%);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    overflow: hidden;
+    /* background: linear-gradient(0deg, var(--white) 0%, var(--yellow) 33%, var(--red) 100%); */
+}
+.legg {
+    width: 100%;
+    height: 10%;
+}
+#legg-1 {
+    background-color: var(--legg-10);
+}
+#legg-2 {
+    background-color: var(--legg-20);
+}
+#legg-3 {
+    background-color: var(--legg-30);
+}
+#legg-4 {
+    background-color: var(--legg-40);
+}
+#legg-5 {
+    background-color: var(--legg-50);
+}
+#legg-6 {
+    background-color: var(--legg-60);
+}
+#legg-7 {
+    background-color: var(--legg-70);
+}
+#legg-8 {
+    background-color: var(--legg-80);
+}
+#legg-9 {
+    background-color: var(--legg-90);
+}
+#legg-10 {
+    background-color: var(--legg-100);
 }
 .map-container {
     width: calc(100% - 50px);
