--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --white: #F4F4F4;
     --blue: #1FB1A9;
     --blue-op: #1FB1A9aa;
+    --blue-dark: #0f4f4c;
     --legg-10: #f8e08a;
     --legg-20: #f5d872;
     --legg-30: #e9ca5c;
@@ -239,7 +240,7 @@ html {
     fill: var(--blue)
 }
 .old {
-    fill: var(--black);
+    fill: var(--blue-dark);
 }
 .progress-container {
     width: 100%;
