--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --blue: #1FB1A9;
     --blue-op: #1FB1A9aa;
     --blue-dark-op: #0f4f4caa;
-    --blue-dark: #0f4f4c;
+    --blue-dark: #2d6764;
     --legg-10: #f8e08a;
     --legg-20: #f5d872;
     --legg-30: #e9ca5c;
