--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
     --black: #3A3A3A;
+    --gray: #636363;
     --white: #F4F4F4;
+    --white-op: #F4F4F4cc;
     --blue: #1FB1A9;
     --blue-op: #1FB1A9aa;
     --blue-dark-op: #0f4f4caa;
@@ -21,11 +23,13 @@
     --red: #b13e3e;
     --red-clear: #b45454;
 }
+/* #############################______ GENERAL */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--black);
 }
 html, body {
     width: 100%;
@@ -38,6 +42,15 @@ html {
     -ms-overflow-style: none;  
     scrollbar-width: none;  
 }
+.main-container {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--black);
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+/* #############################______ LOADING */
 .loading-container {
     width: 100%;
     height: 100vh;
@@ -45,7 +58,7 @@ html {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 1000;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -74,25 +87,54 @@ html {
     animation-duration: 0.5s;
     animation-direction: reverse;
 }
-
 .spinner::after {
     margin: 8.9px;
 }
-
 @keyframes spinner-e04l1k {
     100% {
       transform: rotate(1turn);
     }
 }
+/* #############################______ STARTING SECTION */
+@keyframes starter {
+    0% {
+      top: 0;
+    }
+    100% {
+      top: -100vh;
+    }
+}
+.start {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 998;
+    background-color: var(--white-op);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.start h2 {
+    font-size: 100px;
+    text-align: center;
+    color: var(--blue)
+}
+[data-started="true"] {
+    animation-name: starter;
+    animation-duration: 0.7s;
+    animation-fill-mode: forwards;
+}
+/* #############################______ DETAILS (EVENTS + PROJECT INFOS) */
 .cover {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 1000;
+    z-index: 998;
     background-color: var(--blue-op);
     flex-direction: row;
     justify-content: center;
-    align-items: center;;
+    align-items: center;
 }
 .det {
     padding: 50px 20px;
@@ -103,10 +145,39 @@ html {
     border-radius: 15px;
 }
 .det h2 {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    color: var(--blue);
+    width: 100%;
+    text-align: center;
+    border-bottom: solid 4px var(--blue);
+    padding-bottom: 10px;
+}
+.det .date {
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    color: var(--gray);
 }
 .det p {
     margin-bottom: 20px;
+}
+.det a {
+    padding: 5px 30px;
+    /* background-color: var(--blue); */
+    border: solid 2px var(--blue);
+    color: var(--blue);
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 15px;
+    display: block;
+    font-weight: bold;
+    width: min-content;
+    float: right;
+    margin-top: 30px;
+}
+.det a:hover {
+    background-color: var(--blue);
+    color: var(--white);
 }
 .close {
     position: fixed;
@@ -130,14 +201,17 @@ html {
 [data-cover="false"] {
     display: none;
 }
-.main-container {
+/* #############################______ CENTRAL CONTAINER WITH MENU, MAP, LEGEND & FOOTER */
+.central-section {
     width: 100%;
-    height: 100vh;
-    background-color: var(--black);
-    position: fixed;
-    top: 0;
-    left: 0;
+    height: calc(100vh - 130px);
+    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 25px 50px;
 }
+/* #############################______ HEADER */
 .header {
     width: 100%;
     height: 50px;
@@ -151,31 +225,20 @@ html {
 .header h1, .header h2, .header h3 {
     font-size: 20px;
 }
-
 .infos {
     border: none;
     background-color: var(--white);
 }
-
 .infos:hover {
     cursor: pointer;
 }
-
 .infos svg {
     fill: var(--black);
 }
 .infos:hover svg {
     fill: var(--blue);
 }
-.central-section {
-    width: 100%;
-    height: calc(100vh - 130px);
-    display: block;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 25px 50px;
-}
+/* #############################______ LEGEND BAR */
 .leg-bar {
     width: 50px;
     height: 100%;
@@ -228,6 +291,7 @@ html {
 #legg-10 {
     background-color: var(--legg-100);
 }
+/* #############################______ MAP */
 .map-container {
     width: calc(100% - 50px);
     height: 100%;
@@ -245,6 +309,7 @@ html {
 .current:hover, .old:hover {
     cursor: pointer;
 }
+/* #############################______ PROGRESSION SECTION */
 .progress-container {
     width: 100%;
     height: 80px;
@@ -272,7 +337,7 @@ html {
     background-color: var(--blue);
     border-radius: 100px;
 }
-
+/* #############################______ ALERTS */
 @keyframes appear {
     0% {
       opacity: 0;
@@ -281,19 +346,9 @@ html {
       opacity: 1;
     }
 }
-
-@keyframes disappear {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
-}
-
 .message-cont {
     position: fixed;
-    z-index: 1000;
+    z-index: 997;
     top: 60px;
     right: 40px;
     display: flex;
@@ -304,7 +359,6 @@ html {
 .message {
     padding: 10px 40px;
     background-color: var(--blue-op);
-    
     border-radius: 15px;
 }
 .message h2 {
@@ -315,19 +369,15 @@ html {
     font-size: 12px;
     color: var(--white);
 }
-
 .message:hover {
     background-color: var(--blue);
     cursor: pointer;
 }
-
 [data-active="true"] {
     animation-name: appear;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
 [data-active="false"] {
-    animation-name: disappear;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
+    display: none;
 }
