--- a/style/style.css
+++ b/style/style.css
@@ -328,6 +328,32 @@ html {
     width: 100%;
     height: 10%;
 }
+.leg-bar-leg {
+    width: 300px;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.leg-bar-leg .leg-bar-bar {
+    width: 100%;
+    height: 100%;
+    background: var(--transparent);
+    border-radius: 0px;
+    overflow: visible;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.leg-bar-leg .leg-bar-bar .legg {
+    width: 400%;
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-left: 10px;
+}
 #legg-1 {
     background-color: var(--legg-10);
 }
