--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,10 @@
 }
 html, body {
     width: 100%;
+    height: 100%;
+    
+}
+.in {
     height: calc(100vh + 15000px);
 }
 html::-webkit-scrollbar {
@@ -176,7 +180,6 @@ html {
     color: var(--blue);
     background-color: var(--white);
 }
-
 [data-started="true"] {
     animation-name: starter;
     animation-duration: 0.7s;
@@ -481,10 +484,6 @@ text {
 [data-active="false"] {
     display: none;
 }
-
-
-
-
 .message-cont .restart {
     padding: 10px 25px;
     font-size: 15px;
@@ -493,7 +492,6 @@ text {
     border-radius: 10px;
     border: solid 2px var(--white);
 }
-
 .message-cont .restart:hover {
     cursor: pointer;
     background-color: var(--white);
