--- a/style/style.css
+++ b/style/style.css
@@ -231,7 +231,7 @@ html {
 .det p {
     margin-bottom: 20px;
 }
-.det a {
+.det .ev-link {
     padding: 5px 30px;
     /* background-color: var(--blue); */
     border: solid 2px var(--blue);
@@ -245,7 +245,10 @@ html {
     float: right;
     margin-top: 30px;
 }
-.det a:hover {
+.det .small {
+    color: var(--blue);
+}
+.det .ev-link:hover {
     background-color: var(--blue);
     color: var(--white);
 }
