Change body height

--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ html, body {
     
 }
 .in {
-    height: calc(100vh + 15000px);
+    height: calc(100vh + calc(100vh * 60));
 }
 html::-webkit-scrollbar {
     display: none;
